force-app/main/default/objects/Fortnite_Player__c/Fortnite_Player__c.object-meta.xml
<CustomObject>
    <description>Represents player data such as uid, username, stats, etc.</description>
    <label>Fortnite Player</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fortnite Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>