force-app/main/default/objects/Fortnite_Player__c/fields/account_progress_pct__c.field-meta.xml
<CustomField>
    <fullName>account_progress_pct__c</fullName>
    <defaultValue>0</defaultValue>
    <label>account_progress_pct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>