force-app/main/default/objects/Fortnite_Player__c/fields/platforms__c.field-meta.xml
<CustomField>
    <fullName>platforms__c</fullName>
    <description>The platforms that the player has used</description>
    <label>platforms</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>