force-app/main/default/objects/Fortnite_Player__c/fields/seasons__c.field-meta.xml
<CustomField>
    <fullName>seasons__c</fullName>
    <description>The seasons that the player has played</description>
    <label>seasons</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>