force-app/main/default/objects/Fortnite_Player__c/fields/uid__c.field-meta.xml
<CustomField>
    <fullName>uid__c</fullName>
    <description>Unique ID for the player</description>
    <externalId>true</externalId>
    <label>uid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>