force-app/main/default/objects/Fortnite_Player__c/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <description>The unique userrname for the player</description>
    <externalId>true</externalId>
    <label>username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>