force-app/main/default/objects/Fortnite_Player__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>username__c</columns>
    <columns>uid__c</columns>
    <columns>platforms__c</columns>
    <columns>seasons__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>