force-app/main/default/objects/Fortnite_Player__c/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>username__c</columns>
    <columns>uid__c</columns>
    <columns>account_level__c</columns>
    <columns>account_progress_pct__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>Details</label>
</ListView>